Pedalbox - working animation full adaptive.

--- a/dest/pedalbox.html
+++ b/dest/pedalbox.html
@@ -136,13 +136,24 @@
                 <p class="working__subtitle">Rodzaje programów</p>
                 <div class="working__mobile">
                   <div class="working__box">
-                    <p class="working__box-title">Sport+<span>(zmienia kolor diody na kolor czerwony)</span></p>
-                    <p class="working__box-description">Tryb najbardziej sportowy, który pozwala poszaleć samochodem, wykorzystując wszystkie jego walory. Najszybszy start samochodu ze świateł.</p>
                     <div class="swiper-container swiper-container--working">
                       <div class="swiper-wrapper">
-                                            <div class="swiper-slide"><img src="./img/img-pedalbox-slider.png" srcset="./img/img-pedalbox-slider@2x.png 2x" alt="" title=""></div>
-                                            <div class="swiper-slide"><img src="./img/img-pedalbox-slider.png" srcset="./img/img-pedalbox-slider@2x.png 2x" alt="" title=""></div>
-                                            <div class="swiper-slide"><img src="./img/img-pedalbox-slider.png" srcset="./img/img-pedalbox-slider@2x.png 2x" alt="" title=""></div>
+                                            <div class="swiper-slide" data-slide-id="0">
+                                              <p class="working__box-title">Sport+<span class='working__box-title--desc'>(zmienia kolor diody na kolor czerwony)</span></p>
+                                              <p class="working__box-description">Tryb najbardziej sportowy, który pozwala poszaleć samochodem, wykorzystując wszystkie jego walory. Najszybszy start samochodu ze świateł.</p><img src="./img/img-pedalbox-slider-0.png" srcset="./img/img-pedalbox-slider-0@2x.png 2x" alt="" title="">
+                                            </div>
+                                            <div class="swiper-slide" data-slide-id="1">
+                                              <p class="working__box-title">Sport<span class='working__box-title--desc'>(zmienia kolor diody na kolor pomarańczowy)</span></p>
+                                              <p class="working__box-description">W trybie Sport reakcja pedału gazu jest zwiększona do 16%, co powoduje, że jest to tryb mający zastosowanie w większości sytuacji drogowych. Idealny do codziennej jazdy.</p><img src="./img/img-pedalbox-slider-1.png" srcset="./img/img-pedalbox-slider-1@2x.png 2x" alt="" title="">
+                                            </div>
+                                            <div class="swiper-slide" data-slide-id="2">
+                                              <p class="working__box-title">City<span class='working__box-title--desc'>(zmienia kolor diody na kolor zielony)</span></p>
+                                              <p class="working__box-description">City pozwala cieszyć się szybszą reakcją pedału gazu w miejskim zgiełku. Jest to tryb słabszy od Sport, ale za to bardzo przewidywalny i komfortowy.</p><img src="./img/img-pedalbox-slider-2.png" srcset="./img/img-pedalbox-slider-2@2x.png 2x" alt="" title="">
+                                            </div>
+                                            <div class="swiper-slide" data-slide-id="3">
+                                              <p class="working__box-title">Off<span class='working__box-title--desc'>(wyłącza diodę)</span></p>
+                                              <p class="working__box-description">Ostatni tryb powoduje wyłączenie PedalBoxa z obwodu pedału gazu. Wtedy pedał gazu działa w stu procentach fabrycznie, bo PedalBox nie modyfikuje jego wartości.</p><img src="./img/img-pedalbox-slider-3.png" srcset="./img/img-pedalbox-slider-3@2x.png 2x" alt="" title="">
+                                            </div>
                       </div>
                       <div class="swiper-pagination"></div>
                       <div class="swiper-button-prev"></div>
