Create powercontrol page - add similar page - full adaptive.

--- a/dest/powercontrol.html
+++ b/dest/powercontrol.html
@@ -106,7 +106,150 @@
       </div>
     </header>
     <!-- HEADER :: END-->
-    <div class="body body--start p-powercontrol"></div>
+    <div class="body body--start p-powercontrol">
+      <!-- SECTION APPLICATION :: START-->
+      <section class="application" id="application">
+        <div class="application__wrapper">
+          <div class="application__bg"><span></span><span></span><span></span></div>
+          <div class="c-grid">
+            <div class="application__row">
+              <div class="application__row-left">
+                <div class="application__mobile">
+                  <h2 class="application__title">Aplikacja Pedalbox</h2>
+                  <p class="application__subtitle">Dostępna tylko dla Pedalbox+</p>
+                </div><img src="./img/img-phone-application.png" srcset="./img/img-phone-application@2x.png 2x" alt="" title="">
+              </div>
+              <div class="application__row-right">
+                <h2 class="application__title">Aplikacja Pedalbox</h2>
+                <p class="application__subtitle">Dostępna tylko dla Pedalbox+</p>
+                <div class="application__block">
+                  <div class="product__box-footer">
+                    <ul>
+                      <li>
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Kontrola Pedalbox przez appkę</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li>
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Możliwość dopasowania programu</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li>
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Zawsze aktualne oprogramowanie</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li>
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Ponad 20 ustawień</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="application__btn-wrapper"><a class="application__btn application__btn--ios" href="#" title=""><img src="/img/img-ios.png" srcset="/img/img-ios@2x.png 2x" alt="" title=""></a><a class="application__btn application__btn--android" href="#" title=""><img src="/img/img-android.png" srcset="/img/img-android@2x.png 2x" alt="" title=""></a></div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION APPLICATION :: END-->
+      <!-- SECTION CERTIFICATES :: START-->
+      <section class="certificates" id="certificates">
+        <div class="c-grid">
+          <div class="certificates__wrapper">
+            <h2 class="certificates__title">Certyfikaty i członkostwa</h2>
+            <p class="certificates__text">Produkty <span>DTE Systems</span> posiadają certyfikację <span>niemieckiego oraz austryjackiego TÜV</span> przy wsparciu organizacji <span>Dekra</span>, zaś sama firma jest członkiem takich organizacji jak <span>KÜS</span> oraz <span>VDAT</span>.</p>
+            <div class="certificates__img-wrapper">
+              <div class="certificates__img"><img src="./img/img-logo.png" srcset="./img/img-logo@2x.png 2x" alt="" title=""></div>
+              <div class="certificates__img"><img src="./img/img-logo.png" srcset="./img/img-logo@2x.png 2x" alt="" title=""></div>
+              <div class="certificates__img"><img src="./img/img-logo.png" srcset="./img/img-logo@2x.png 2x" alt="" title=""></div>
+              <div class="certificates__img"><img src="./img/img-logo.png" srcset="./img/img-logo@2x.png 2x" alt="" title=""></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION CERTIFICATES :: END-->
+      <!-- REDUCED :: START-->
+      <section class="reduced" id="reduced">
+        <div class="reduced__wrapper reduced__wrapper-0">
+          <div class="c-grid">
+            <div class="reduced__row reduced__row-0">
+              <div class="reduced__row-left"><img src="./img/img-item-reduced.png" srcset="./img/img-item-reduced@2x.png 2x" alt="" title=""></div>
+              <div class="reduced__row-right">
+                <h2 class="reduced__title">Zmniejszone zużycie paliwa</h2>
+                <p class="reduced__text"><span>Dlaczego urządzenie powodujące szybsze przyspieszanie zmniejsza zużycie paliwa?</span> Ponieważ z podstawowych zasad Eco Drivingu wynika właśnie, że im szybciej osiągniemy zadaną prędkość, tym silnik zużyje mniej paliwa. Stąd PedalBox, który zwiększa i przyspiesza reakcję pedału gazu, powoduje rzadszą potrzebę zajeżdżania pod dystrybutor.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="reduced__wrapper reduced__wrapper-1">
+          <div class="reduced__wrapper-bg"><span></span><span></span><span></span></div>
+          <div class="c-grid">
+            <div class="reduced__row reduced__row-1">
+              <div class="reduced__row-left">
+                <h2 class="reduced__subtitle">Sprawdź ofertę dla Twojego samochodu:</h2>
+              </div>
+              <div class="reduced__row-right">
+                <form class="c-form" action="" method="">
+                  <div class="c-form__group c-form__group--select">
+                    <div class="c-form__group-col c-form__group-col-0">
+                      <div class="c-form__field c-form__field--select">
+                        <div class="c-form__select-wrap">
+                          <select name="" select-js>
+                            <option value="1">Pokażemy Ci co możemy z nim zrobić!</option>
+                            <option value="1">Marka</option>
+                            <option value="1">Marka</option>
+                            <option value="1">Marka</option>
+                            <option value="1">Marka</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="c-form__group-col c-form__group-col-1">
+                      <div class="c-form__field c-form__field--select">
+                        <div class="c-form__select-wrap">
+                          <select name="" select-js>
+                            <option value="1">Pokażemy Ci co możemy z nim zrobić!</option>
+                            <option value="1">Model</option>
+                            <option value="1">Model</option>
+                            <option value="1">Model</option>
+                            <option value="1">Model</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="c-form__group-col c-form__group-col-2">
+                      <div class="c-form__field c-form__field--select">
+                        <div class="c-form__select-wrap">
+                          <select name="" select-js>
+                            <option value="1">Pokażemy Ci co możemy z nim zrobić!</option>
+                            <option value="1">Silnik</option>
+                            <option value="1">Silnik</option>
+                            <option value="1">Silnik</option>
+                            <option value="1">Silnik</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- REDUCED :: END-->
+    </div>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
       <div class="footer__bar">
