Powercontrol page - create order, powercontrol, period, types section; include item, application, certificates and reduced section - w\ adaptive.

--- a/dest/pedalbox.html
+++ b/dest/pedalbox.html
@@ -223,7 +223,9 @@
               <div class="item__row-left">
                 <div class="item__mobile">
                   <p class="item__subtitle">Pedalbox</p>
-                </div><img src="./img/img-item-0.png" srcset="./img/img-item-0@2x.png 2x" alt="" title="">
+                </div>
+                <div class="item__image"><img src="./img/img-item-0.png" srcset="./img/img-item-0@2x.png 2x" alt="" title="">
+                </div>
               </div>
               <div class="item__row-right">
                 <p class="item__subtitle">Pedalbox</p>
@@ -267,7 +269,9 @@
               <div class="item__row-left">
                 <div class="item__mobile">
                   <p class="item__subtitle">Pedalbox<span>+</span></p>
-                </div><img src="./img/img-item-1.png" srcset="./img/img-item-1@2x.png 2x" alt="" title="">
+                </div>
+                <div class="item__image"><img src="./img/img-item-1.png" srcset="./img/img-item-1@2x.png 2x" alt="" title="">
+                </div>
               </div>
               <div class="item__row-right">
                 <p class="item__subtitle">Pedalbox<span>+</span></p>
