--- a/dest/powercontrol.html
+++ b/dest/powercontrol.html
@@ -107,6 +107,171 @@
     </header>
     <!-- HEADER :: END-->
     <div class="body body--start p-powercontrol">
+      <!-- SECTION powercontrol :: START-->
+      <section class="section powercontrol" id="powercontrol">
+        <!--.section__bg.section__bg--dark-->
+        <div class="c-grid">
+          <div class="powercontrol__wrapper">
+            <div class="powercontrol__row powercontrol__row-0">
+              <div class="powercontrol__row-left"><img src="./img/img-powercontrol.png" srcset="./img/img-powercontrol@2x.png 2x" alt="" title=""></div>
+              <div class="powercontrol__row-right">
+                <h1 class="powercontrol__title">PowerControl</h1>
+                <p class="powercontrol__text">Najlepszy na rynku moduł tuningowy</p>
+                <div class="powercontrol__block-wrapper">
+                  <div class="powercontrol__block powercontrol__block-0"><img src="./img/img-powercontrol-ind-0.png" srcset="./img/img-powercontrol-ind-0@2x.png 2x" alt="" title="">
+                    <p>+30%</p>
+                  </div>
+                  <div class="powercontrol__block powercontrol__block-1"><img src="./img/img-powercontrol-ind-1.png" srcset="./img/img-powercontrol-ind-1@2x.png 2x" alt="" title="">
+                    <p>+30%</p>
+                  </div>
+                  <div class="powercontrol__block powercontrol__block-2"><img src="./img/img-powercontrol-ind-2.png" srcset="./img/img-powercontrol-ind-2@2x.png 2x" alt="" title="">
+                    <p>-15%</p>
+                  </div>
+                </div>
+                <p class="powercontrol__text powercontrol__text--pb">Zapewnia wzrost mocy i momentu aż do 30%, a ponadto obniża spalanie samochodu do 1l na 100km.</p>
+                <p class="powercontrol__text">Pokochaj swój samochód – na nowo – dzięki chiptuningowi nowej generacji od firmy DTE Systems. <span>Made in Germany.</span></p>
+              </div>
+            </div>
+            <div class="powercontrol__row powercontrol__row-1"><a class="powercontrol__btn c-btn" href="#" title="">Poznaj PowerControl</a></div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION powercontrol :: END-->
+      <!-- SECTION period :: START-->
+      <section class="period" id="period">
+        <div class="c-grid">
+          <div class="period__wrapper">
+            <div class="period__wrapper-left"><img src="./img/img-period-main.png" srcset="./img/img-period-main@2x.png 2x" alt="" title=""></div>
+            <div class="period__wrapper-right">
+              <h1 class="period__title">14 dniowy okres testowy</h1>
+              <p class="period__text">Pamiętaj, że mimo montażu wraz z pomiarami na hamowni nadal przysługuje Ci 14 dni na przetestowanie produktu. Jeśli uzyskany przyrost nie będzie zadowalający lub cokolwiek innego nie będzie przebiegać po Twojej myśli masz pełne prawo do zwrotu, zaś my zwrócimy Ci pełną kwotę poniesioną za produkt.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION period :: END-->
+      <!-- SECTION ITEM :: START-->
+      <section class="item" id="item">
+        <div class="c-grid">
+          <h2 class="item__title">Dwie wersje produktu</h2>
+          <div class="item__wrapper">
+            <div class="item__row item__row-0">
+              <div class="item__row-left">
+                <div class="item__mobile">
+                  <p class="item__subtitle">PowerControl</p>
+                </div>
+                <div class="item__image"><img src="./img/img-powercontrol-main.png" srcset="./img/img-powercontrol-main@2x.png 2x" alt="" title="">
+                </div>
+              </div>
+              <div class="item__row-right">
+                <p class="item__subtitle">PowerControl</p>
+                <div class="item__block">
+                  <div class="product__box-footer">
+                    <ul>
+                      <li>
+                        <div><img src="./img/img-item-2.png" srcset="./img/img-item-2@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Bez utraty gwarancji</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li>
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>4 programy do wyboru</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li class="item__block--wm">
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Ponad 20 ustawień</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li class="item__block--wm">
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Funkcja pamięci</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item__row item__row-1">
+              <div class="item__row-left">
+                <div class="item__mobile">
+                  <p class="item__subtitle">PowerControl X</p>
+                </div>
+                <div class="item__image"><img src="./img/img-powercontrol-x-main.png" srcset="./img/img-powercontrol-x-main@2x.png 2x" alt="" title="">
+                </div>
+              </div>
+              <div class="item__row-right">
+                <p class="item__subtitle">PowerControl X</p>
+                <div class="item__block">
+                  <div class="product__box-footer">
+                    <ul>
+                      <li>
+                        <div><img src="./img/img-item-2.png" srcset="./img/img-item-2@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Bez utraty gwarancji</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li>
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>4 programy do wyboru</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li>
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Ponad 20 ustawień</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li>
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Funkcja pamięci</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li class="item__block--plus">
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>PerfecTune</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li class="item__block--plus">
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Nowy wygląd</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li class="item__block--wm item__block--plus">
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Większa precyzja</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION ITEM :: END-->
       <!-- SECTION APPLICATION :: START-->
       <section class="application" id="application">
         <div class="application__wrapper">
@@ -163,6 +328,70 @@
         </div>
       </section>
       <!-- SECTION APPLICATION :: END-->
+      <!-- SECTION types :: START-->
+      <section class="types" id="types">
+        <div class="types__wrapper types__wrapper-0">
+          <div class="types__bg"><span></span><span></span><span></span></div>
+          <div class="c-grid">
+            <h1 class="types__title">Rodzaje programów</h1>
+            <div class="types__box-wrapper">
+              <div class="types__box types__box-0"><img src="./img/img-types-0.png" srcset="./img/img-types-0@2x.png 2x" alt="" title="">
+                <p class="types__box-title">Sport</p>
+                <p class="types__box-desc">(zmienia kolor diody na kolor czerwony)</p>
+                <p class="types__box-text">Najmocniejszy tryb pracy – tuning w pełnej okazałości. Idealny jeśli chcesz poczuć całą moc drzemiącą w Twoim samochodzie.</p>
+              </div>
+              <div class="types__box types__box-1"><img src="./img/img-types-1.png" srcset="./img/img-types-1@2x.png 2x" alt="" title="">
+                <p class="types__box-title">Dynamic</p>
+                <p class="types__box-desc">(zmienia kolor diody na kolor żółty)</p>
+                <p class="types__box-text">Jest to idealny tryb do codziennej jazdy, kiedy potrzebujemy większej dynamiki, ale nadal dbamy o ekonomię jazdy.</p>
+              </div>
+              <div class="types__box types__box-2"><img src="./img/img-types-2.png" srcset="./img/img-types-2@2x.png 2x" alt="" title="">
+                <p class="types__box-title">Eco</p>
+                <p class="types__box-desc">(zmienia kolor diody na kolor zielony)</p>
+                <p class="types__box-text">Najlepszy tryb do typowej jazdy miejskiej od świateł do świateł. Charakteryzuje się przede wszystkim oszczędnością paliwa.</p>
+              </div>
+            </div>
+            <div class="types__col">
+              <div class="working__block working__block-0">
+                <div class="working__block-left"><span>+</span></div>
+                <div class="working__block-middle">
+                  <p>Użyj symbolu plusa, żeby zwiększyć czułość modułu</p><span>3 stopnie zwiększonej czułości, wyświetlane na czerwono</span>
+                </div>
+              </div>
+              <div class="working__block working__block-1">
+                <div class="working__block-left"><span>-</span></div>
+                <div class="working__block-middle">
+                  <p>Użyj symbolu minusa, żeby zmniejszyć czułość modułu</p><span>3 stopnie zmniejszonej czułości, wyświetlane na zielono</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="types__wrapper types__wrapper-1">
+          <div class="c-grid">
+            <div class="types__video">
+              <div class="types__video-wrapper">
+                <p>Zobacz video z montażem krok po kroku</p><a href="#" title=""><i class="icon-font icon-play"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION types :: END-->
+      <!-- SECTION order :: START-->
+      <section class="order" id="order">
+        <div class="order__bg"></div>
+        <div class="c-grid">
+          <div class="order__wrapper">
+            <div class="order__wrapper-left"><img src="./img/img-pedalbox-slider-3.png" srcset="./img/img-pedalbox-slider-3@2x.png 2x" alt="" title=""></div>
+            <div class="order__wrapper-middle">
+              <p>Zamów PowerControl w zestawie z modułem Pedalbox</p><span>a otrzymasz 10% rabatu do całego zamówienia</span>
+            </div>
+            <div class="order__wrapper-right"><a class="order__btn c-btn" href="#" title="">Poznaj Pedalbox</a></div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION order :: END-->
       <!-- SECTION CERTIFICATES :: START-->
       <section class="certificates" id="certificates">
         <div class="c-grid">
