Powercontrol page - add derails section, fix powercontrol main bg - w\ adaptive.

--- a/dest/pedalbox.html
+++ b/dest/pedalbox.html
@@ -396,7 +396,8 @@
         <div class="details__row details__row-0">
           <div class="c-grid">
             <div class="details__wrapper details__wrapper-0">
-              <div class="details__wrapper-left"><img src="./img/img-details-0.jpg" srcset="./img/img-details-0@2x.jpg 2x" alt="" title=""></div>
+              <div class="details__wrapper-left"><img src="./img/img-details-0.jpg" srcset="./img/img-details-0@2x.jpg 2x" alt="" title="">
+              </div>
               <div class="details__wrapper-right">
                 <h2 class="details__title">Dla Twojego samochodu</h2>
                 <p class="details__text">PedalBox pasuje do każdego samochodu z elektronicznym pedałem gazu (czyli większość pojazdów wyprodukowanych po 2000 roku), choć nie jest produktem w pełni uniwersalnym.</p>
@@ -460,34 +461,36 @@
                   <li class="details__item">
                     <div class="details__item-left"><span class="details__item-num">1</span></div>
                     <div class="details__item-right">
-                      <p class="details__item-title">14 dni na przetestowanie PedalBox</p>
-                      <p class="details__item-text">Kupując PedalBox otrzymujesz od nas aż 14 dni na sprawdzenie, czy urządzenie spełnia Twoje oczekiwania.</p>
+                      <p class="details__item-title">Nie tracisz fabrycznej gwarancji na swój samochód</p>
+                      <p class="details__item-text">Instalacja PedalBoxa nie wpływa w żaden sposób na fabryczną gwarancję pojazdu. Nie ingerujemy również w żadne ustawienia samochodu.</p>
                     </div>
                   </li>
                   <li class="details__item">
                     <div class="details__item-left"><span class="details__item-num">2</span></div>
                     <div class="details__item-right">
-                      <p class="details__item-title">Nie tracisz gwarancji</p>
-                      <p class="details__item-text">Instalacja PedalBoxa nie wpływa w żaden sposób na fabryczną gwarancję pojazdu. Nie ingerujemy również w żadne ustawienia samochodu.</p>
+                      <p class="details__item-title">Pełna certyfikację niemieckiego oraz austriackiego urzędu TÜV</p>
+                      <p class="details__item-text">PowerControl musiał przejść szereg wymagających testów określających jego bezpieczeństwo dla Twojego pojazdu. Nasze produkty są okresowo testowane przez TÜV, który tym samym upewnia się, czy nadal spełniamy ich rygorystyczne wymogi.</p>
                     </div>
                   </li>
                   <li class="details__item">
                     <div class="details__item-left"><span class="details__item-num">3</span></div>
                     <div class="details__item-right">
-                      <p class="details__item-title">Pomoc</p>
-                      <p class="details__item-text">Zarówno przed, jak i po zakupie jesteśmy dla Ciebie dostępni przez cały tydzień. Pomożemy w każdej kwestii, wyjaśnimy każde zagadnienie. Najbardziej cenimy sobie zadowolenie naszych klientów.</p>
+                      <p class="details__item-title">Kupujesz raz, a korzystasz przez wiele lat.</p>
+                      <p class="details__item-text">Jeśli zmienisz samochód, przeprogramujemy za darmo Twój PowerControl tak, aby pasował do nowego pojazdu.</p>
                     </div>
                   </li>
                 </ul>
               </div>
-              <div class="details__wrapper-right"><img src="./img/img-details-1.jpg" srcset="./img/img-details-1@2x.jpg 2x" alt="" title=""></div>
+              <div class="details__wrapper-right"><img src="./img/img-details-1.jpg" srcset="./img/img-details-1@2x.jpg 2x" alt="" title="">
+              </div>
             </div>
           </div>
         </div>
         <div class="details__row details__row-2">
           <div class="c-grid">
             <div class="details__wrapper details__wrapper-2">
-              <div class="details__wrapper-left"><img src="./img/img-details-2.jpg" srcset="./img/img-details-2@2x.jpg 2x" alt="" title=""></div>
+              <div class="details__wrapper-left"><img src="./img/img-details-2.jpg" srcset="./img/img-details-2@2x.jpg 2x" alt="" title="">
+              </div>
               <div class="details__wrapper-right">
                 <h2 class="details__title">A co znajdę w zestawie?</h2>
                 <p class="details__text">W zestawie otrzymujesz:</p>
