--- a/dest/powercontrol.html
+++ b/dest/powercontrol.html
@@ -109,7 +109,7 @@
     <div class="body body--start p-powercontrol">
       <!-- SECTION powercontrol :: START-->
       <section class="section powercontrol" id="powercontrol">
-        <!--.section__bg.section__bg--dark-->
+        <div class="section__bg section__bg--dark"></div>
         <div class="c-grid">
           <div class="powercontrol__wrapper">
             <div class="powercontrol__row powercontrol__row-0">
@@ -137,6 +137,188 @@
         </div>
       </section>
       <!-- SECTION powercontrol :: END-->
+      <!-- SECTION DETAILS :: START-->
+      <section class="details" id="details">
+        <div class="details__row details__row-0">
+          <div class="c-grid">
+            <div class="details__wrapper details__wrapper-0">
+              <div class="details__wrapper-left"><img src="./img/img-details-3.jpg" srcset="./img/img-details-3@2x.jpg 2x" alt="" title="">
+              </div>
+              <div class="details__wrapper-right">
+                <h2 class="details__title">Dla Twojego samochodu</h2>
+                <p class="details__text">Każdy zestaw PowerControl jest programowany, konfigurowany oraz kompletowany specjalnie pod Twoje zamówienie oraz dla Twojego modelu samochodu i silnika.</p>
+                <p class="details__text">Nie jest to produkt uniwersalny, dlatego koniecznie sprawdź, czy opracowaliśmy wersję dla Twojego pojazdu!</p>
+                <div class="details__select">
+                  <form class="c-form" action="" method="">
+                    <div class="c-form__group c-form__group--select">
+                      <div class="c-form__group-col c-form__group-col-0">
+                        <div class="c-form__field c-form__field--select">
+                          <div class="c-form__select-wrap">
+                            <select name="" select-js>
+                              <option value="1">Pokażemy Ci co możemy z nim zrobić!</option>
+                              <option value="1">Marka</option>
+                              <option value="1">Marka</option>
+                              <option value="1">Marka</option>
+                              <option value="1">Marka</option>
+                            </select>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="c-form__group-col c-form__group-col-1">
+                        <div class="c-form__field c-form__field--select">
+                          <div class="c-form__select-wrap">
+                            <select name="" select-js>
+                              <option value="1">Pokażemy Ci co możemy z nim zrobić!</option>
+                              <option value="1">Model</option>
+                              <option value="1">Model</option>
+                              <option value="1">Model</option>
+                              <option value="1">Model</option>
+                            </select>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="c-form__group-col c-form__group-col-2">
+                        <div class="c-form__field c-form__field--select">
+                          <div class="c-form__select-wrap">
+                            <select name="" select-js>
+                              <option value="1">Pokażemy Ci co możemy z nim zrobić!</option>
+                              <option value="1">Silnik</option>
+                              <option value="1">Silnik</option>
+                              <option value="1">Silnik</option>
+                              <option value="1">Silnik</option>
+                            </select>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="details__row details__row-1">
+          <div class="c-grid">
+            <div class="details__wrapper details__wrapper-1">
+              <div class="details__wrapper-left">
+                <h2 class="details__title">Bezpieczeństwo</h2>
+                <ul class="details__list">
+                  <li class="details__item">
+                    <div class="details__item-left"><span class="details__item-num">1</span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-title">Nie tracisz fabrycznej gwarancji na swój samochód</p>
+                      <p class="details__item-text">Instalacja PedalBoxa nie wpływa w żaden sposób na fabryczną gwarancję pojazdu. Nie ingerujemy również w żadne ustawienia samochodu.</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span class="details__item-num">2</span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-title">Pełna certyfikację niemieckiego oraz austriackiego urzędu TÜV</p>
+                      <p class="details__item-text">PowerControl musiał przejść szereg wymagających testów określających jego bezpieczeństwo dla Twojego pojazdu. Nasze produkty są okresowo testowane przez TÜV, który tym samym upewnia się, czy nadal spełniamy ich rygorystyczne wymogi.</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span class="details__item-num">3</span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-title">Kupujesz raz, a korzystasz przez wiele lat.</p>
+                      <p class="details__item-text">Jeśli zmienisz samochód, przeprogramujemy za darmo Twój PowerControl tak, aby pasował do nowego pojazdu.</p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="details__wrapper-right"><img src="./img/img-details-4.jpg" srcset="./img/img-details-4@2x.jpg 2x" alt="" title="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="details__row details__row-4">
+          <div class="c-grid">
+            <div class="details__wrapper details__wrapper-4">
+              <div class="details__wrapper-left"><img src="./img/img-details-5.jpg" srcset="./img/img-details-5@2x.jpg 2x" alt="" title=""></div>
+              <div class="details__wrapper-right">
+                <h2 class="details__title">Gwarantujemy satysfakcję</h2>
+                <p class="details__text">Nasz program <span>Gwarancji Satysfakcji</span> składa się z trzech elementów:</p>
+                <ul class="details__list">
+                  <li class="details__item">
+                    <div class="details__item-left"><span class="details__item-num">1</span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-title">14 dni na przetestowanie PedalBox</p>
+                      <p class="details__item-text">Kupując PedalBox otrzymujesz od nas aż 14 dni na sprawdzenie, czy urządzenie spełnia Twoje oczekiwania.</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span class="details__item-num">2</span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-title">Nie tracisz gwarancji</p>
+                      <p class="details__item-text">Instalacja PedalBoxa nie wpływa w żaden sposób na fabryczną gwarancję pojazdu. Nie ingerujemy również w żadne ustawienia samochodu.</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span class="details__item-num">3</span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-title">Pomoc</p>
+                      <p class="details__item-text">Zarówno przed, jak i po zakupie jesteśmy dla Ciebie dostępni przez cały tydzień. Pomożemy w każdej kwestii, wyjaśnimy każde zagadnienie. Najbardziej cenimy sobie zadowolenie naszych klientów.</p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="details__row details__row-2">
+          <div class="c-grid">
+            <div class="details__wrapper details__wrapper-2">
+              <div class="details__wrapper-left"><img src="./img/img-details-6.png" srcset="./img/img-details-6@2x.png 2x" alt="" title="">
+              </div>
+              <div class="details__wrapper-right">
+                <h2 class="details__title">A co znajdę w zestawie?</h2>
+                <p class="details__text">W zestawie otrzymujesz:</p>
+                <ul class="details__list">
+                  <li class="details__item">
+                    <div class="details__item-left"><span></span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-text">Moduł PowerControl</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span></span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-text">Okablowanie zgodne ze wszystkimi normami producentów</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span></span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-text">Instrukcję instalacji w Twoim pojeździe</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span></span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-text">Certyfikat TÜV</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span></span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-text">2 letnią gwarancję na PowerControl</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span></span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-text">Możliwość darmowego przeprogramowania modułu w celu przystosowania do innego samochodu</p>
+                    </div>
+                  </li>
+                </ul><a class="details__btn" href="#" title="">
+                  <div><span><i class="icon-font icon-play"></i></span></div>
+                  <div><span>Zobacz unboxing PowerControl</span></div></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION DETAILS :: END-->
       <!-- SECTION period :: START-->
       <section class="period" id="period">
         <div class="c-grid">
