Powercontrol page - create article section - w\ adaptive.

--- a/dest/powercontrol.html
+++ b/dest/powercontrol.html
@@ -445,6 +445,19 @@
         </div>
       </section>
       <!-- SECTION save :: END-->
+      <!-- SECTION article :: START-->
+      <section class="article" id="article">
+        <div class="c-grid">
+          <div class="article__wrapper">
+            <div class="article__wrapper-left"><img src="./img/img-article-main.png" srcset="./img/img-article-main@2x.png 2x" alt="" title=""></div>
+            <div class="article__wrapper-right">
+              <p class="article__text">PowerControl po raz kolejny zwycięzcą testu magazynu EuroTuner</p>
+              <div class="article__btn-wrapper"><a class="article__btn c-btn" href="#" title="">Pobierz artykuł</a></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION article :: END-->
       <!-- SECTION period :: START-->
       <section class="period" id="period">
         <div class="c-grid">
