--- a/dest/powercontrol.html
+++ b/dest/powercontrol.html
@@ -458,6 +458,60 @@
         </div>
       </section>
       <!-- SECTION article :: END-->
+      <!-- SECTION assembly :: START-->
+      <section class="assembly" id="assembly">
+        <div class="c-grid">
+          <div class="assembly__header">
+            <div>
+              <p class="assembly__title">Montaż wraz z pomiarami na hamowni MAHA</p>
+            </div>
+            <div><img src="./img/img-assembly-logo.png" srcset="./img/img-assembly-logo@2x.png 2x" alt="" title=""></div>
+          </div>
+          <div class="assembly__wrapper">
+            <div class="assembly__wrapper-left">
+              <ul class="assembly__list">
+                <li class="assembly__list-item">
+                  <div><span class="assembly__list-num">1</span><span class="assembly__list-line"></span></div>
+                  <div>
+                    <h3>Umów się</h3>
+                    <p><span>Skontaktuj się z nami</span>, aby umówić się na wybrany przez siebie termin. Pamiętaj, że zawsze z chęcią odpowiemy na wszystkie Twoje pytania — jesteśmy dla Was dostępni przez cały czas.</p>
+                  </div>
+                </li>
+                <li class="assembly__list-item">
+                  <div><span class="assembly__list-num">2</span><span class="assembly__list-line"></span></div>
+                  <div>
+                    <h3>Przyjedź</h3>
+                    <p>Przed montażem oraz pomiarami, nasz pracownik przekaże Ci wszystkie dokumenty związane z Twoim zakupem oraz poinformuje o tym, jak będzie przebiegała procedura. Operacja trwa zazwyczaj od 1,5h do 2,5h a Ty możesz czekać na miejscu w komfortowej poczekalni.</p>
+                  </div>
+                </li>
+                <li class="assembly__list-item">
+                  <div><span class="assembly__list-num">3</span><span class="assembly__list-line"></span></div>
+                  <div>
+                    <h3>Pierwsze pomiary</h3>
+                    <p>Wykonane zostaną pomiary Twojego auta przed modyfikacją, abyśmy mieli punkt odniesienia. Dysponujemy nowoczesną hamownią obciążeniową 4×4 firmy Dynoproject, więc możemy zmierzyć każdy rodzaj pojazdu.</p>
+                  </div>
+                </li>
+                <li class="assembly__list-item">
+                  <div><span class="assembly__list-num">4</span><span class="assembly__list-line"></span></div>
+                  <div>
+                    <h3>Montaż oraz pomiary po modyfikacji</h3>
+                    <p>Przeprowadzimy montaż Performance Pack w Twoim pojeździe. Następnie wykonamy kolejne pomiary na hamowni celem wybrania najlepszego programu oraz ustawień dla Twojego samochodu.</p>
+                  </div>
+                </li>
+                <li class="assembly__list-item">
+                  <div><span class="assembly__list-num">5</span></div>
+                  <div>
+                    <h3>Odbiór pojazdu</h3>
+                    <p>Po modyfikacji zaprezentujemy Ci wynik wraz z nałożonymi na siebie wykresami przed i po modyfikacji, przez co będziesz mógł łatwo ocenić wyniki naszej pracy. Następnie pokażemy Ci, jak został zamontowany moduł oraz przekażemy wszelkie uwagi, abyś w przyszłości mógł samemu zdemontować moduł i okablowanie przed wizytą w serwisie. Odbędziemy też krótką jazdę próbną z Tobą, abyś finalnie mógł odebrać swój „nowy” samochód.</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="assembly__wrapper-right"><img src="./img/img-assembly-0.jpg" srcset="./img/img-assembly-0@2x.jpg 2x" alt="" title=""><img src="./img/img-assembly-1.jpg" srcset="./img/img-assembly-1@2x.jpg 2x" alt="" title=""></div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION assembly :: END-->
       <!-- SECTION period :: START-->
       <section class="period" id="period">
         <div class="c-grid">
